force-app/main/default/objects/Survey_Response__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <description>ERT</description>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18-24</fullName>
            </value>
            <value>
                <fullName>25-34</fullName>
            </value>
            <value>
                <fullName>35-4445-54</fullName>
            </value>
            <value>
                <fullName>55-64</fullName>
            </value>
            <value>
                <fullName>65+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>