force-app/main/default/objects/Survey_Response__c/fields/Allow_Contact_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Allow_Contact_Resolve__c</fullName>
    <description>ERT</description>
    <formula>IF(AND(Contact__c=NULL, TEXT(Type__c)!= &apos;Prayer&apos;, TEXT(Type__c)!= &apos;Question&apos;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Contact Resolve</label>
    <type>Checkbox</type>
</CustomField>