force-app/main/default/objects/Survey_Response__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ERT</description>
    <label>Attendee</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>