force-app/main/default/objects/Survey_Response__c/fields/Claimed_By__c.field-meta.xml
<CustomField>
    <fullName>Claimed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The user who claimed this prayer request or question for response. Replaces OwnerId for claim tracking to avoid breaking manual sharing rules.</description>
    <label>Claimed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Claimed Survey Responses</relationshipLabel>
    <relationshipName>Claimed_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>