force-app/main/default/objects/Survey_Response__c/fields/Event_Area__c.field-meta.xml
<CustomField>
    <fullName>Event_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ERT</description>
    <label>Event Area</label>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>