force-app/main/default/objects/Survey_Response__c/fields/Event_Detail__c.field-meta.xml
<CustomField>
    <fullName>Event_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ERT</description>
    <label>Event Detail</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>