force-app/main/default/objects/Survey_Response__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <description>ERT</description>
    <formula>Text(Attendee__r.Registrant_Type__c) &amp;&apos;-&apos;&amp; Text(Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter</label>
    <type>Text</type>
</CustomField>