force-app/main/default/objects/Survey_Response__c/fields/How_Heard__c.field-meta.xml
<CustomField>
    <fullName>How_Heard__c</fullName>
    <description>ERT</description>
    <label>How Heard</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>