force-app/main/default/objects/Survey_Response__c/fields/Invite_others__c.field-meta.xml
<CustomField>
    <fullName>Invite_others__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERT</description>
    <label>Invite Others</label>
    <type>Checkbox</type>
</CustomField>