force-app/main/default/objects/Survey_Response__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERT</description>
    <label>Local</label>
    <type>Checkbox</type>
</CustomField>