force-app/main/default/objects/Survey_Response__c/fields/Marriage_Impact__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Impact__c</fullName>
    <description>ERT</description>
    <label>Marriage Impact</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>