force-app/main/default/objects/Survey_Response__c/fields/Recommitment__c.field-meta.xml
<CustomField>
    <fullName>Recommitment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERT</description>
    <label>Recommitment</label>
    <type>Checkbox</type>
</CustomField>