force-app/main/default/objects/Survey_Response__c/fields/Speaker_Issues__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Issues__c</fullName>
    <description>ERT</description>
    <label>Speaker Issues</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>