force-app/main/default/objects/Survey_Response__c/fields/Sur_Email__c.field-meta.xml
<CustomField>
    <fullName>Sur_Email__c</fullName>
    <description>ERT</description>
    <label>Sur Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>