force-app/main/default/objects/Survey_Response__c/fields/Sur_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Sur_First_Name__c</fullName>
    <description>ERT</description>
    <label>Sur First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>