force-app/main/default/objects/Survey_Response__c/fields/Sur_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sur_Phone__c</fullName>
    <description>ERT</description>
    <label>Sur Phone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>