force-app/main/default/objects/Survey_Response__c/fields/Sur_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Sur_ZipCode__c</fullName>
    <description>ERT</description>
    <label>Sur ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>